--- a/Scroll/static/tailwindcss/input.css
+++ b/Scroll/static/tailwindcss/input.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.scrollbar::-webkit-scrollbar {
+  width: 5px;
+}
+
+.scrollbar::-webkit-scrollbar-track {
+  background: black;
+}
+
+.scrollbar::-webkit-scrollbar-thumb {
+  background: #6b7280;
+}
